--- a/src/components/ui/Button/button.scss
+++ b/src/components/ui/Button/button.scss
@@ -1,44 +1,64 @@
-$button-variant-map: (
-  contained: (background: #000,
-    color: #fff,
+// props로 받은 변수
+// --btn-color : 버튼 색상
+// --btn-hover-color : 버튼 호버시 색상
+// --contained-text-color : contained  버튼 텍스트 색상
+// --btn-radius : 버튼 라운드 값
+
+$btn-variant-map: (
+  contained: (
+    background: var(--btn-color),
+    color: var(--contained-text-color),
   ),
   outlined: (
-    background: #fff,
-    color: #000,
-    border: 1px solid #000,
+    color: var(--btn-color),
+    border: 2px solid var(--btn-color),
   ),
   text: (
-    color: #000,
+    color: var(--btn-color),
     font-weight: 600,
     text-decoration: underline,
+  ),
+  'contained:hover': (
+    background: var(--btn-hover-color),
+  ),
+  'outlined:hover': (
+    border: 2px solid var(--btn-color),
+    background: var(--btn-color),
+    color: var(--contained-text-color),
+  ),
+  'text:hover': (
+    color: var(--btn-hover-color),
   ),
 );
 
 $button-size-map: (
   sm: (
-    padding: 8px 16px,
+    padding: 6px 12px,
     font-size: 14px,
   ),
   md: (
-    padding: 12px 24px,
+    padding: 10px 20px,
     font-size: 16px,
   ),
   lg: (
-    padding: 16px 32px,
+    padding: 14px 28px,
     font-size: 18px,
   ),
 );
 
 
 .sui-button {
-  display: block;
+  display: inline-block;
+  width: fit-content;
+  border: 1px solid transparent;
+  border-radius: var(--btn-radius);
   background: none;
   cursor: pointer;
-  border: 1px solid transparent;
-  width: fit-content;
+  transition: all 0.3s ease;
+  text-align: center;
 
   // variant
-  @each $variant, $style in $button-variant-map {
+  @each $variant, $style in $btn-variant-map {
     &--#{$variant} {
       @each $key,
       $value in $style {
