--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,2 +1,10 @@
 @use 'abstracts' as *;
 @use 'base' as *;
+@use 'layout' as *;
+
+
+.sui-page-wrapper {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 20px 20px 0;
+}
