fix: Button - transition 수정

--- a/src/components/ui/Button/button.scss
+++ b/src/components/ui/Button/button.scss
@@ -54,7 +54,7 @@ $button-size-map: (
   border-radius: var(--btn-radius);
   background: none;
   cursor: pointer;
-  transition: all 0.3s ease;
+  transition: background 0.3s ease, color 0.3s ease, border 0.3s ease;
   text-align: center;
 
   // variant
