--- a/src/components/ui/Textarea/textarea.scss
+++ b/src/components/ui/Textarea/textarea.scss
@@ -24,8 +24,9 @@ $textarea-sizes-map: (
 
   textarea {
     border: 1px solid #ddd;
-    border-radius: 4px;
+    border-radius: var(--textarea-radius);
     padding: 4px;
+    max-width: 100%;
   }
 
   &__hidden-label {
