--- a/src/components/ui/Input/input.scss
+++ b/src/components/ui/Input/input.scss
@@ -32,18 +32,18 @@ $input-sizes-map: (
 
   @each $size, $value in $input-sizes-map {
     &--#{$size} {
-      @each $key, $value in $value {
-        #{$key}: $value;
+      input {
+        @each $key, $value in $value {
+          #{$key}: $value;
+        }
       }
     }
   }
 
   input {
     border: 1px solid #ddd;
-    border-radius: 4px;
+    border-radius: var(--input-radius);
     padding: 4px;
-    width: 100%;
-    height: 100%;
   }
 
   &--full-width {
