--- a/src/assets/scss/layout/_guide.scss
+++ b/src/assets/scss/layout/_guide.scss
@@ -13,9 +13,9 @@
     &__control {
         display: flex;
         flex-direction: column;
-        gap: 10px;
+        gap: 20px;
         background: #f4f4f4;
-        padding: 12px;
+        padding: 20px 24px;
         margin-top: 10px;
 
         &-group {
@@ -45,9 +45,13 @@
                     }
 
                     &[type="number"] {
-                        width: 100px;
                         padding: 4px;
                     }
+                }
+
+                @media (max-width: 768px) {
+                    flex-direction: column;
+                    align-items: flex-start;
                 }
             }
         }
