--- a/src/assets/scss/layout/_guide.scss
+++ b/src/assets/scss/layout/_guide.scss
@@ -14,8 +14,10 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
-        background: #f4f4f4;
+        border: 1px solid #ececec;
+        box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.1);
         padding: 20px 24px;
+        border-radius: 6px;
         margin-top: 10px;
 
         &-group {
@@ -46,6 +48,14 @@
 
                     &[type="number"] {
                         padding: 4px;
+                    }
+
+                    &[type="color"] {
+                        width: 26px;
+                        height: 30px;
+                        padding: 0;
+                        border: none;
+                        background: none;
                     }
                 }
 
