style(input,textarea): padding 수정

--- a/src/components/ui/Input/input.scss
+++ b/src/components/ui/Input/input.scss
@@ -57,7 +57,7 @@ $input-sizes-map: (
       border: none!important;
       background: #f4f4f4;
       border-radius: var(--input-radius);
-      padding: 4px;
+      padding: 4px 8px;
     }
   }
 
