--- a/src/assets/scss/layout/_guide.scss
+++ b/src/assets/scss/layout/_guide.scss
@@ -24,10 +24,13 @@
             display: flex;
             flex-direction: column;
             gap: 8px;
-            margin-top: 10px;
+            border-top: 1px solid #ececec;
+            padding-top: 17px;
+
             > div {
                 display: flex;
                 align-items: center;
+                min-height: 30px;
                 gap: 6px;
 
                 label {
@@ -37,7 +40,7 @@
                 }
                 input {
                     border: 1px solid #ddd;
-                    border-radius: 4px;
+                    border-radius: 8px;
                     font-size: 16px;
                     font-weight: 500;
 
@@ -57,6 +60,13 @@
                         border: none;
                         background: none;
                     }
+                }
+                
+                select {
+                    border: 1px solid #ddd;
+                    border-radius: 8px;
+                    min-width: 100px;
+                    height: 36px;
                 }
 
                 @media (max-width: 768px) {
