style(Input): underline 타입 포커스 스타일 수정

--- a/src/components/ui/Input/input.scss
+++ b/src/components/ui/Input/input.scss
@@ -66,6 +66,12 @@ $input-sizes-map: (
       border: none;
       border-bottom: 2px solid #ddd;
       border-radius: 0!important;
+      outline: none;
+
+      &:focus {
+        border-color: #000;
+        outline: none;
+      }
     }
   }
 
