style(checkbox): border color 변경

--- a/src/components/ui/Checkbox/checkbox.scss
+++ b/src/components/ui/Checkbox/checkbox.scss
@@ -95,6 +95,7 @@ $checkbox-sizes-map: (
                     &~label {
                         &::before {
                             background-color: #cccccc;
+                            border-color: #ccc;
                         }
                     }
                 }
