--- a/src/components/ui/Input/input.scss
+++ b/src/components/ui/Input/input.scss
@@ -21,6 +21,7 @@ $input-sizes-map: (
   flex-direction: column;
   gap: 10px;
   width: fit-content;
+  max-width: 100%;
 
   &__hidden-label {
     position: absolute;
@@ -34,6 +35,7 @@ $input-sizes-map: (
     border: 1px solid #ddd;
     border-radius: var(--input-radius);
     padding: 4px;
+    max-width: 100%;
 
     &:disabled {
       background: #eee;
