--- a/src/components/ui/Radio/radio.scss
+++ b/src/components/ui/Radio/radio.scss
@@ -1,3 +1,5 @@
+@use 'sass:map';
+
 $radio-sizes: (
   sm: (
     size: 16px,
@@ -27,7 +29,7 @@ $radio-sizes: (
 
   @each $size, $value in $radio-sizes {
     &--#{$size} {
-      font-size: map-get($value, 'font-size');
+      font-size: map.get($value, 'font-size');
 
       input {
         display: none;
@@ -56,8 +58,8 @@ $radio-sizes: (
           border-radius: 50%;
           border: 1px solid #ddd;
           box-sizing: border-box;
-          width: map-get($value, 'size');
-          height: map-get($value, 'size');
+          width: map.get($value, 'size');
+          height: map.get($value, 'size');
         }
         &::after {
           content: '';
@@ -67,10 +69,10 @@ $radio-sizes: (
           border-radius: 50%;
           transform: scale(0);
           transition: transform 0.2s ease-in-out;
-          top: calc((map-get($value, 'size') - map-get($value, 'check-size')) / 2);
-          left: calc((map-get($value, 'size') - map-get($value, 'check-size')) / 2);
-          width: map-get($value, 'check-size');
-          height: map-get($value, 'check-size');
+          top: calc((map.get($value, 'size') - map.get($value, 'check-size')) / 2);
+          left: calc((map.get($value, 'size') - map.get($value, 'check-size')) / 2);
+          width: map.get($value, 'check-size');
+          height: map.get($value, 'check-size');
         }
       }
     }
