--- a/src/assets/scss/layout/_guide.scss
+++ b/src/assets/scss/layout/_guide.scss
@@ -1,5 +1,11 @@
 .sui-guide {
 
+    &__row {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
     &__title {
         font-size: 20px;
         font-weight: 600;
