--- a/src/components/ui/Select/select.scss
+++ b/src/components/ui/Select/select.scss
@@ -105,7 +105,7 @@ $select-size: (
     }
   }
 
-  &--filled 
+  &--filled {
     .sui-select {
       &__selected {
         background-color: #f4f4f4;
