feat: 라우팅 및 컴포넌트 가이드 페이지 추가

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -8,5 +8,11 @@
         max-width: 1280px;
         margin: 0 auto;
         padding: 10px 20px;
+
+        ul {
+            display: flex;
+            gap: 25px;
+            margin-left: auto;
+        }
     }
 }
