style(Button): hover 상태에서 버튼 텍스트 색상을 흰색으로 변경

--- a/src/components/ui/Button/button.scss
+++ b/src/components/ui/Button/button.scss
@@ -24,7 +24,7 @@ $btn-variant-map: (
   'outlined:hover:not([disabled]):not(.sui-button--no-hover-effect)': (
     border: 2px solid var(--btn-hover-color),
     background: var(--btn-hover-color),
-    color: var(--btn-text-color),
+    color: #fff,
   ),
   'text:hover:not([disabled]):not(.sui-button--no-hover-effect)': (
     color: var(--btn-hover-color),
