--- a/src/assets/scss/layout/_guide.scss
+++ b/src/assets/scss/layout/_guide.scss
@@ -7,12 +7,73 @@
     }
 
     &__title {
-        font-size: 20px;
+        font-size: 28px;
         font-weight: 600;
-        margin-bottom: 10px;
         
         &:not(:first-child) {
             margin-top: 40px;
+        }
+    }
+
+    &__subtitle {
+        display: flex;
+        align-items: center;
+        font-size: 20px;
+        font-weight: 600;
+        margin-bottom: 8px;
+        color: #333;
+
+        &:before {
+            content: '';
+            display: block;
+            width: 4px;
+            height: 4px;
+            background-color: #333;
+            border-radius: 50%;
+            margin-right: 10px;
+        }
+        
+        &:not(:first-child) {
+            margin-top: 36px;
+        }
+    }
+
+    &__description {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.4;
+        margin-bottom: 20px;
+
+        .strong {
+            display: block;
+            font-size: 18px;
+            font-weight: 600;
+            margin-bottom: 10px;
+        }
+
+        &:not(:first-child) {
+            margin-top: 12px;
+        }
+    }
+
+    &__content {
+        margin: 36px 0 40px;
+
+        &-item {
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+            gap: 6px;
+            &-title {
+                font-size: 14px;
+                font-weight: 500;
+                color: #777;
+                text-indent: 3px;
+
+                &:not(:first-child) {
+                    margin-top: 6px;
+                }
+            }
         }
     }
 
